initial splash component and test

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    
+    <meta name="description" content="Hi, I'm Simon Fraser, a website, JavaScript and user experience specialist from Northern Ireland." />
+    <meta name="keywords" content="development, e-commerce, website, optimisation, seo, user experience, javascript, typescript, react, nextjs, vue, unix, github, Belfast, Northern Ireland" />
+    <meta name="robots" content="index, follow" />
+
+    <title>Hi I'm Simon Fraser</title>
   </head>
   <body>
     <div id="root"></div>
