--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <meta name="description" content="Hi, I'm Simon Fraser, a website, JavaScript and user experience specialist from Northern Ireland." />
@@ -10,6 +9,8 @@
     <meta name="robots" content="index, follow" />
 
     <title>Hi I'm Simon Fraser</title>
+    <link rel="icon" type="image/png" href="/android-chrome-512x512.png" />
+
   </head>
   <body>
     <div id="root"></div>
