Performance updates from GTMetrics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>Hi I'm Simon Fraser</title>
     <link rel="icon" type="image/png" href="/android-chrome-512x512.png" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;600&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
